test/domains/compilerErrors/domain-delete.chpl
// formerly BenA's types/records/compilerErrors/deleteRecordMessage

var D = {1..10};
delete D;
